tests/ui/type-alias-impl-trait/incoherent-assoc-imp-trait.stderr
error[E0119]: conflicting implementations of trait `FnOnce()` for type `&_`
  --> $DIR/incoherent-assoc-imp-trait.rs:10:1
   |
LL | impl<F> FnOnce<()> for &F {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<A, F> FnOnce<A> for &F
             where A: Tuple, F: Fn<A>, F: ?Sized;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
